--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -15,9 +15,9 @@
 </view>
 <view class="lunbo">
   <swiper class='u-wrp-bnr' indicator-dots='true' autoplay='true' interval='5000' duration='1000' circular='true'>
-    <block wx:for="{{bnrUrl}}" wx:for-index="index">
+    <block wx:for="{{banner_info}}" wx:for-index="index">
       <swiper-item>
-        <image src='{{item.url}}' class='u-img-slide' mode='aspectFill'></image>
+        <image src='{{item.pic}}' class='u-img-slide'     mode='aspectFill'></image>
       </swiper-item>
     </block>
   </swiper>
@@ -42,25 +42,23 @@
 </view>
 <view class="div">
   <text bindtap="kaochang">考场推荐</text>
-  <view class="divcs">
-    <view>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
+  <view class="divcs" wx:if="{{room_status}}">
+    <view wx:for="{{driving_room}}">
+    <image src="{{item.pic}}"></image>
     </view>
+  </view>
+  <view class="divcs" wx:else="{{room_status}}">
+      <view style="color:red;">{{driving_room}}</view>
   </view>
 </view>
 <view class="div">
   <text bindtap="jiaxiao">驾校推荐</text>
-  <view class="divcs">
-    <view>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
-    <image src="../../img/xiaotu.png"></image>
+  <view class="divcs" wx:if="{{school_status}}">
+    <view wx:for="{{driving_school}}">
+    <image src="{{item.pic}}"></image>
     </view>
+  </view>
+   <view class="divcs" wx:else="{{school_status}}">
+      <view style="color:red;">{{driving_school}}</view>
   </view>
 </view>
