--- a/pages/jiaxiao/index.wxml
+++ b/pages/jiaxiao/index.wxml
@@ -18,37 +18,14 @@
   </view>
 </view>
 
-<view class="divcs">
-  <view class="div">
-    <image src="../../img/kaochang.png"></image>
+<view class="divcs" wx:if="{{school_status}}">
+  <view class="div" wx:for="{{school_res}}">
+    <image src="{{item.pic}}"></image>
     <view class="txt">
-      <text class="t1">鹏程驾校报名费1888全程无忧等等</text>
-      <text class="t2">碰传较短时间考虑收到JFK了</text>
-      <text class="t3">￥999</text>
-    </view>
-  </view>
-  <view class="div">
-    <image src="../../img/kaochang.png"></image>
-    <view class="txt">
-      <text class="t1">鹏程驾校报名费1888全程无忧等等</text>
-      <text class="t2">碰传较短时间考虑收到JFK了</text>
-      <text class="t3">￥999</text>
-    </view>
-  </view>
-  <view class="div">
-    <image src="../../img/kaochang.png"></image>
-    <view class="txt">
-      <text class="t1">鹏程驾校报名费1888全程无忧等等</text>
-      <text class="t2">碰传较短时间考虑收到JFK了</text>
-      <text class="t3">￥999</text>
-    </view>
-  </view>
-  <view class="div">
-    <image src="../../img/kaochang.png"></image>
-    <view class="txt">
-      <text class="t1">鹏程驾校报名费1888全程无忧等等</text>
-      <text class="t2">碰传较短时间考虑收到JFK了</text>
-      <text class="t3">￥999</text>
+      <text>{{item.name}}</text>
+      <text>{{item.description}}</text>
+      <text>￥{{item.price}}</text>
     </view>
   </view>
 </view>
+<view class="divcs" wx:else><text>{{school_res}}</text></view>
