--- a/pages/jiaxiaos/index.wxml
+++ b/pages/jiaxiaos/index.wxml
@@ -1,2 +1,67 @@
 <!--pages/jiaxiaos/index.wxml-->
-<text>pages/jiaxiaos/index.wxml</text>
+<view class="head">
+  <component-head inner-text="驾校场地">
+  </component-head>
+</view>
+<view class="top">
+  <text>庆华考场</text>
+</view>
+<view class="lunbo">
+  <swiper class='u-wrp-bnr' indicator-dots='true' autoplay='true' interval='5000' duration='1000' circular='true'>
+    <block wx:for="{{bnrUrl}}" wx:for-index="index">
+      <swiper-item class="u-img-item">
+        <image src='{{item.url}}' class='u-img-slide' mode='aspectFill'></image>
+      </swiper-item>
+    </block>
+  </swiper>
+</view>
+<view class="icon">
+  <view wx:for="{{arr}}">
+    <image src="{{item.src}}"></image>
+    <text>{{item.txt}}</text>
+  </view>
+</view>
+<view class="main">
+  <view class="kaochang">
+    <text class="t1">考场信息</text>
+    <text class="t2">庆华考场乍地一万三千多平方米，单词可容纳考生9000余次庆华考场乍地一万三千多平方米，单词可容纳考生9000余次</text>
+  </view>
+  <view class="baoming">
+    <text>报名提交</text>
+    <view class="form">
+      <view class="view1">
+        <view>
+          <text>姓名：</text>
+          <input></input>
+        </view>
+        <view>
+          <text>性别：</text>
+          <input></input>
+        </view>
+        <view>
+          <text>招考驾校：</text>
+          <input></input>
+        </view>
+        <view>
+          <text>考试科目：</text>
+          <input></input>
+        </view>
+      </view>
+      <view class="view2">
+        <view>
+          <text>学员身份证号：</text>
+          <input></input>
+        </view>
+        <view>
+          <text>教练姓名：</text>
+          <input></input>
+        </view>
+        <view>
+          <text>教练联系方式：</text>
+          <input></input>
+        </view>
+      </view>
+      </view>
+    <button>提交</button>
+  </view>
+</view>
