--- a/pages/jiaxiaos/index.wxss
+++ b/pages/jiaxiaos/index.wxss
@@ -1,1 +1,125 @@
 /* pages/jiaxiaos/index.wxss */
+
+.top{
+  padding: 20rpx;
+  display: flex;
+  justify-content: center;
+}
+.top text{
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  padding: 10rpx 0;
+  background-color: #ccc;
+  border-radius: 30rpx;
+}
+
+.lunbo{
+  padding: 1rem;
+}
+.u-wrp-bnr {
+  width: 100%;
+}
+.u-img-item{
+  border-radius: 20rpx;
+}
+.u-img-slide {
+  width: 100%;
+  height: 340rpx;
+  border-radius: 20rpx;
+}
+
+.icon{
+  display: flex;
+  justify-content: space-around;
+  padding: 50rpx 100rpx;
+}
+.icon>view{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.icon image{
+  width: 100rpx;
+  height: 100rpx;
+}
+
+.main{
+  padding: 30rpx;
+  background-color: rgb(245, 245, 245);
+}
+.main .kaochang{
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  margin-bottom: 30rpx;
+  padding: 20rpx;
+  border-radius: 40rpx;
+}
+.main .kaochang .t1{
+  padding: 10rpx 0;
+}
+.main .kaochang .t2{
+  font-size: 12px;
+  line-height: 70rpx;
+  padding: 10rpx;
+  border-top: 1px solid rgb(245, 245, 245);
+  border-bottom: 1px solid rgb(245, 245, 245);
+    overflow:hidden;/*溢出隐藏*/
+    text-overflow: ellipsis;/*超出部分显示省略号*/
+    display:-webkit-box;/*弹性盒*/
+    -webkit-box-orient:vertical;/*设置对象内元素的排列方式为垂直*/
+    -webkit-line-clamp:3;/*限制块元素文本行数*/
+}
+.main .baoming{
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 40rpx;
+  padding: 20rpx;
+}
+.main .baoming>text{
+  padding: 10rpx 0;
+}
+.main .baoming .form{
+  margin: 10rpx;
+  border: 1px solid #ccc;
+}
+.main .baoming .form>view{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+.main .baoming .form .view1 view{
+  font-size: 12px;
+  width: 49.2%;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+}
+.main .baoming .form .view1 view:nth-child(odd){
+  border-right:none;
+}
+.main .baoming .form .view2 view{
+  font-size: 12px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+}
+.main .baoming .form .view1 input{
+  width: 50%;
+}
+.main .baoming .form .view2 input{
+  width: 60%;
+}
+
+.main .baoming button{
+  width: 70%;
+  height: 2rem;
+  line-height: 2rem;
+  font-size: 16px;
+  margin: 20rpx auto;
+  border-radius: 30rpx;
+}
